--- a/src/components/WelcomePage/index.css
+++ b/src/components/WelcomePage/index.css
@@ -1,24 +1,23 @@
-.container {
+.welcome {
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   padding: 10px;
-}
-
-.container ul {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.container h1 {
+  margin-top: 40%;
   font-size: 25px;
-  margin-bottom: 10px;
-  color: #ffd900ee;
 }
 
-.container button {
+.welcome h1,
+p {
+  color: #ffd900ee;
+  font-weight: bolder;
+  background: transparent;
+}
+
+.welcome button {
+  margin-top: 20px;
   padding: 10px;
   background-color: #ffd900ee;
   border: none;
@@ -26,23 +25,14 @@
   font-family: "MedievalSharp", cursive;
   transition: 0.5s;
 }
+
 button:hover {
   background-color: #000000;
   color: #ffd900ee;
 }
 
 @media screen and (min-width: 769px) {
-  .container {
-    margin-top: 10%;
-  }
-
-  .container ul {
-    flex-direction: row;
-  }
-  .container li {
-    margin: 4px;
-  }
-  .container button {
-    margin-top: 20px;
+  .welcome {
+    margin-top: 20%;
   }
 }
