--- a/src/components/CharCard/index.css
+++ b/src/components/CharCard/index.css
@@ -7,7 +7,7 @@
 
 .card {
   list-style: none;
-  width: 250px;
+  width: 200px;
   border: 4px solid black;
   border-radius: 10px;
   background-color: cornflowerblue;
@@ -17,6 +17,12 @@
   margin-bottom: 10px;
   padding: 10px;
   color: #ffd900ee;
+  transition: transform 1s;
+  transform: translateX(4) scale(0.5);
+}
+
+.card:hover {
+  transform: translateX(5px) scale(1.1);
 }
 
 .card h3 {
